--- a/leogame/pom.xml
+++ b/leogame/pom.xml
@@ -9,7 +9,13 @@
 		<dependency>
 			<groupId>org.lwjgl.lwjgl</groupId>
 			<artifactId>lwjgl</artifactId>
-			<version>2.8.2</version>
+			<version>2.8.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.lwjgl.lwjgl</groupId>
+			<artifactId>lwjgl_util</artifactId>
+			<version>2.8.3</version>
 		</dependency>
 	</dependencies>
 
