--- a/leogame/pom.xml
+++ b/leogame/pom.xml
@@ -17,6 +17,19 @@
 			<artifactId>lwjgl_util</artifactId>
 			<version>2.8.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
